paper structure updated and README added

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -34,11 +34,13 @@
 }]
 
 \section{Introduction}
-\footnotetext[1]{Code can be found at \url{github.com/ammar-elsabe/handwritten-digit-recognition-using-deep-learning.git}}
+\footnotetext[1]{Code can be found at \url{github.com/ammar-elsabe/handwritten-digit-recognition-DCNN.git}}
 \Blindtext
 
 \section{Applications of CNNs}
 \Blindtext
+
+\section{The MNIST Dataset}
 
 \section{The Architecture Used}
 \Blindtext
