added the model, forgot to add train with last commit

--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -33,6 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Loading the dataset\n",
     "We use the [load](https://www.tensorflow.org/datasets/api_docs/python/tfds/load) method to load the mnist dataset"
    ]
   },
@@ -159,7 +160,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Preprocessing\n",
     "We preprocess the data by batching it, and applying an autotuned prefetch to make the fetching of the data faster\n",
+    "\n",
+    "Note: instead of preprocessing the data right now, we have a resizing layer in the model architecture\n",
     "\n",
     "From the Tensorflow Documentation:\n",
     "> Prefetching overlaps the preprocessing and model execution of a training step. While the model is executing training step `s`, the input pipeline is reading the data for step `s+1`. Doing so reduces the step time to the maximum (as opposed to the sum) of the training and the time it takes to extract the data."
@@ -201,6 +205,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## The Model\n",
+    "\n",
     "We then create the model architecture"
    ]
   },
