Minor modifications, fixed bar plot

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -68,6 +68,7 @@
     \def\svgwidth{\columnwidth}
     \scriptsize
     \import{./figs/}{cnn_architecture.pdf_tex}
+    \caption{The CNN architecture used to train the model}\label{fig:cnn_architecture}
 \end{figure}
 \Blindtext
 
