--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -258,7 +258,7 @@
    "source": [
     "With the confusion matrix we can calculate the accurace as\n",
     "$$\n",
-    "\\frac{\\sum_i k_{ii}}{\\sum_i \\sum_j k_{ij}} \\times 100\n",
+    "\\frac{\\sum_{i = 0}^9 k_{ii}}{\\sum_{i = 0}^9 \\sum_{j = 0}^9 k_{ij}} \\times 100\n",
     "$$\n",
     "\n",
     "Where $k_{xy}$ represent an element in the $x^{th}$ row and the $y^{th}$ column in the confusion matrix, in other words it is the sum of the elements in the diagonal of the confusion matrix, dividied by the total sum."
@@ -299,7 +299,7 @@
    "source": [
     "We can also calculate the per-digit accuracy for a digit $i$ as\n",
     "$$\n",
-    "\\frac{k_{ii}}{\\sum_j k_{ij}} \\times 100\n",
+    "\\frac{k_{ii}}{\\sum_{j = 0}^9 k_{ij}} \\times 100\n",
     "$$\n",
     "(For example, for the digit $0$, it was predicted correctly $976$ times out of $976 + 0 + 1 + 0 + 0 + 0 + 0 + 1 + 2 + 0$)\n",
     "With that information, we can plot a bar chart to see how accurately our model predicts each digit with the following code"
