Restructuring Section 2 is about convolutional neural networks, so the reader can reference as he's reading the experiments

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -132,4 +132,41 @@
   url       = {https://arxiv.org/abs/1412.6980},
 }
 
+@Article{9151144,
+  author   = {Memon, Jamshed and Sami, Maira and Khan, Rizwan Ahmed and Uddin, Mueen},
+  journal  = {IEEE Access},
+  title    = {Handwritten Optical Character Recognition (OCR): A Comprehensive Systematic Literature Review (SLR)},
+  year     = {2020},
+  issn     = {2169-3536},
+  pages    = {142642-142668},
+  volume   = {8},
+  abstract = {Given the ubiquity of handwritten documents in human transactions, Optical Character Recognition (OCR) of documents have invaluable practical worth. Optical character recognition is a science that enables to translate various types of documents or images into analyzable, editable and searchable data. During last decade, researchers have used artificial intelligence/machine learning tools to automatically analyze handwritten and printed documents in order to convert them into electronic format. The objective of this review paper is to summarize research that has been conducted on character recognition of handwritten documents and to provide research directions. In this Systematic Literature Review (SLR) we collected, synthesized and analyzed research articles on the topic of handwritten OCR (and closely related topics) which were published between year 2000 to 2019. We followed widely used electronic databases by following pre-defined review protocol. Articles were searched using keywords, forward reference searching and backward reference searching in order to search all the articles related to the topic. After carefully following study selection process 176 articles were selected for this SLR. This review article serves the purpose of presenting state of the art results and techniques on OCR and also provide research directions by highlighting research gaps.},
+  doi      = {10.1109/ACCESS.2020.3012542},
+}
+
+@Article{article,
+  author  = {Pathan, Imran and Ramteke, Rakesh},
+  journal = {Advances in Computational Research},
+  title   = {Recognition of Offline Handwritten Isolated Urdu Character},
+  year    = {2012},
+  month   = {03},
+  pages   = {117-121},
+  volume  = {4},
+}
+
+@Article{Connell2001,
+  author   = {Scott D. Connell and Anil K. Jain},
+  journal  = {Pattern Recognition},
+  title    = {Template-based online character recognition},
+  year     = {2001},
+  issn     = {0031-3203},
+  number   = {1},
+  pages    = {1-14},
+  volume   = {34},
+  abstract = {Handwriting is a common, natural form of communication for humans, and therefore it is useful to utilize this modality as a means of input to machines. One well-known method of classifying individual characters or words is template matching. We demonstrate a template-based system for online character recognition where the number of representative templates is determined automatically. These templates can be viewed as representing different styles of writing a particular character. The templates are then used as a reference for efficient classification using decision trees. Overall, our classifier achieves an 86.9% accuracy on a set of 17,928 alphanumeric characters (36 classes; 10 digits and 26 lowercase letters) with a throughput of over 8 characters per second on a 296 MHz Sun UltraSparc.},
+  doi      = {https://doi.org/10.1016/S0031-3203(99)00197-1},
+  keywords = {Clustering, String matching, Online handwriting, Prototypes, Decision trees},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0031320399001971},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
