--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -56,17 +56,23 @@
 
 \section{Introduction}
 \footnotetext[1]{Code can be found at \href{github.com/ammar-elsabe/handwritten-digit-recognition-DCNN.git}{\texttt{github.com/ammar-elsabe/handwritten-\\digit-recognition-DCNN.git}}}
-Computer vision is an interdisciplinary field that asks the question: ``Can a computer learn from pictures?''.\@ After all, a picture is worth a thousand words.\@ One interesting field of computer vision is Optical Character Recognition (OCR), which aims to identify the characters in 
-\Blindtext
+Computer vision is an interdisciplinary field that asks the question: ``Can a computer learn from pictures?''.\@ After all, a picture is worth a thousand words.\@ One interesting field of computer vision is Optical Character Recognition (OCR), which aims to identify the characters in documents. Given the ubiquity of handwritten documents in human transactions, OCR of documents have invaluable practical worth. Optical character recognition is a science that enables to translate various types of documents or images into analyzable, editable and searchable data.
+During last decade, researchers have used artificial intelligence / machine learning tools to automatically analyze handwritten and printed documents in order to convert them into electronic format.
+An OCR system depends mainly, on the extraction of
+features and discrimination/classification of these features
+(based on patterns). Handwritten OCR have received increasing attention as a subfield of OCR.\@ It is further categorized into offline\cite{article} and online systems\cite{Connell2001}.
+\blindtext
 
-\section{Advancements in OCR}
+\section{Convolutional Neural Networks}
+A convolutional neural network consists of an input layer, hidden layers and an output layer. In any feed-forward neural network, any middle layers are called hidden because their inputs and outputs are masked by the activation function and final convolution. In a convolutional neural network, the hidden layers include layers that perform convolutions. Typically this includes a layer that performs a dot product of the convolution kernel with the layer's input matrix. As the convolution kernel slides along the input matrix for the layer, the convolution operation generates a feature map, which in turn contributes to the input of the next layer. This is followed by other layers such as pooling layers, fully connected layers, and normalization layers.
+\subsection{Convolutional Layers}
+In a CNN, the input is a tensor with a shape: (number of inputs) x (input height) x (input width) x (input channels). After passing through a convolutional layer, the image becomes abstracted to a feature map, also called an activation map, with shape: (number of inputs) x (feature map height) x (feature map width) x (feature map channels).
+\par Convolutional layers convolve the input and pass its result to the next layer. This is similar to the response of a neuron in the visual cortex to a specific stimulus.
+
+\subsection{Pooling Layers}
 \blindtext
-\subsection{Neural Networks}
-\blindtext
-\subsubsection{Deep Neural Networks}
-\blindtext
-\subsubsection{Convolutional Neural Networks}
-\cite{Goodfellow-et-al-2016}
+
+\subsection{Fully Connected Layers}
 \blindtext
 
 \section{The MNIST Dataset}
@@ -83,7 +89,7 @@ We used Google's TensorFlow API\cite{tensorflow2015-whitepaper} in Python to tra
 \end{itemize}
 Instead of preprocessing the data, we elected to not preprocess the data at all (except for some automatic tuning and batching to speed up the training), but to have the model take the raw grayscale $28 \times 28$ pixel images.\@ We decided to do that in order to show how powerful DCNNs can be and how good they can be at feature extraction.\@
 As such, our neural network (Figure \ref{fig:cnn_architecture}) starts with a rescaling layer, which is nothing but normalizing the grayscale values from $[0, 255]$ to $[0, 1]$. It is then followed by a 2D convolutional layer with $28 \, 3 \times 3$ kernels, outputting 28 feature maps. The feature maps are then pooled with a $2 \times 2$ pool--size max pooling layer, cutting the amount of pixels in each feature map by $4$. We then apply batch normalization\cite{batchnorm} to reduce overfitting, and redo the above process once more before flattening the image.\@
-Following the flattening of the feature maps, we are left with a 1 dimensional vector of size 700, which is then inputted to a series of fully connected layers, with the number of perceptrons in each layer going $700 \to 128 \to 128 \to 1$. All the layers in the neural network used the relu activation function, except the last one which uses softmax to output its predictions.
+Following the flattening of the feature maps, we are left with a 1 dimensional vector of size 700, which is then inputted to a series of fully connected layers, with the number of perceptrons in each layer going $700 \to 128 \to 128 \to 10$. All the layers in the neural network used the relu activation function, except the last one which uses softmax to output its predictions.
 The losss function used was categorical crossentropy, which is:
 \begin{equation}
     J(\textbf{w}) = -\frac{1}{N} \sum_{i=1}^{N} \left[ y_i \text{log}(\hat{y}_i) + (1-y_i) \text{log}(1-\hat{y}_i) \right]
@@ -97,7 +103,6 @@ and the optimizer used was the ``Adam'' optimizer, which is a version of stochas
     \import{./figs/}{cnn_architecture.pdf_tex}
     \caption{The CNN architecture used to train the model}\label{fig:cnn_architecture}
 \end{figure}
-\vfill\eject
 The callbacks used were the following:
 \begin{lstlisting}[language=Python]
 tf.keras.callbacks.EarlyStopping( 
@@ -178,7 +183,7 @@ which gives us the values needed to plot the accuracy of each digit in the bar c
 \end{figure}
 \par From the bar chart, we can see that the highest accuracy is achieved by the model detecting the digit $4$ at an accuracy of $99.8982\%$, and the lowest accuracy is detecting the digit $9$ with an accuracy of $98.1169\%$.
 \section{Conclusion}
-\blindtext
+In conclusion, we believe that DCNNs will have an important role in upcoming OCR technologies.\@ The results of our experiment are phenomonal, near--human accurate, and with very little cost.\@ There is the issue of our model overfitting too quickly (after just 3 epochs of training), but that can be attributed to the neural network architecture, and with some fine tuning can and has been brought to even more accurate levels.\@
 
 \bibliographystyle{IEEEtran}
 \bibliography{paper.bib}
